@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-27T01:50:09Z",
+  "timestamp" : "2022-07-27T16:27:28Z",
   "count_outdated" : 281,
   "uniques_outdated" : 169,
-  "count" : 288,
-  "uniques" : 175,
+  "count" : 289,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2022-07-14T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
