@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 8,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-07-14T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
